[package]
name = "blp"
version = "0.1.0"
description = "bot liquidity pool"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "blp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
rps = { path = "../rps", features = ["cpi"] }