[package]
name = "rps-token"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rps_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.91"
solana-program = "1.14.13"
spl-associated-token-account = "1.1.2"
spl-token = "3.5.0"
